--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,25 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: "IBM Plex Mono";
 }
+
 .container {
-    width: 1170px;
+    max-width: 1170px;
     margin: 0 auto;
 }
+
 img {
     display: block;
     max-width: 100%;
 }
+
 .logo img {
     width: 161px;
     height: 35px;
 }
+
 .header {
     min-height: 100px;
     position: fixed;
@@ -26,29 +30,35 @@ img {
     width: 100%;
     z-index: 10;
 }
+
 .header-flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .header ul {
     list-style: none;
     display: flex;
     gap: 50px;
     justify-content: center;
 }
+
 .header ul li {
     font-size: 17px;
     color: #131117b3;
     font-weight: 500;
 }
+
 .logo {
     width: 15%;
 }
+
 .menu {
     width: 70%;
     text-align: center;
 }
+
 .socials {
     text-align: right;
     display: flex;
@@ -56,54 +66,66 @@ img {
     justify-content: right;
     width: 15%;
 }
+
 .socials .fa-solid {
     color: #131117b3;
     font-size: 18px;
 }
+
 .hero {
     padding: 100px 0px 0 0;
     background-color: #D9DADC;
 }
+
 .hero-flex {
     display: flex;
     justify-content: space-between;
     gap: 50px;
     align-items: center;
 }
+
 .hero-text {
     width: 50%;
 }
+
 .hero-text h1 {
     margin: 20px 0px;
     font-size: 70px;
 }
+
 .hero p {
     color: #403f43 !important;
     font-size: 16px;
     font-weight: 500;
 }
+
 .hero-image {
     width: 50%;
     display: flex;
     justify-content: flex-start;
 }
+
 .hero-image img {
     max-width: 50vw;
     width: 50vw;
 }
+
 .hero {
     overflow: hidden;
 }
+
 .checks {
     display: flex;
     gap: 20px;
     margin: 50px 0px;
 }
+
 .tick {
     gap: 7px;
     align-items: center;
     display: flex;
 }
+
 .hero button {
     padding: 15px 30px;
     color: white;
@@ -111,16 +133,19 @@ img {
     border: none;
     font-weight: 500;
 }
+
 .cards {
     padding: 75px 0px;
     color: white;
     background-color: #131117;
 }
+
 .card-flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .card {
     display: flex;
     justify-content: center;
@@ -128,81 +153,101 @@ img {
     gap: 20px;
     flex-direction: column;
 }
+
 .card h3 {
     font-size: 20px;
 }
+
 .card p {
     font-size: 14px;
 }
+
 .card img {
     width: 50px;
     height: 50px;
 }
+
 .arrival {
     padding: 80px 0;
 }
+
 .prod {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.heading h2{
+
+.heading h2 {
     font-size: 40px;
 }
+
 .heading p {
     color: #999;
     font-size: 15px;
     font-weight: 500;
 }
+
 .button button {
     padding: 10px 25px;
     border: 2px solid black;
     background-color: transparent;
     font-weight: 500;
 }
+
 .item button {
     padding: 8px 20px;
     background-color: #E8363C;
     border: none;
     color: white;
 }
+
 .image img {
-    width: 265px;
+    max-width: 265px;
     height: 308px;
     transition: .3s all ease-in-out;
 }
+
 .image {
     background-color: #F8F8F8;
     width: 265px;
 }
+
 .item {
     width: 265px;
 }
+
 .item img:hover {
     transform: scale(1.06);
 }
+
 .items {
     display: flex;
     gap: 20px;
     justify-content: space-between;
     margin: 50px 0px;
 }
+
 .dim {
     opacity: .4;
 }
+
 .image {
     overflow: hidden;
     margin-bottom: 20px;
 }
+
 .item p {
     margin: 10px 0px;
 }
+
 .item button {
     margin-top: 10px;
 }
+
 .item {
     position: relative;
 }
+
 .sale {
     position: absolute;
     top: 0;
@@ -210,27 +255,33 @@ img {
     transform: translate(0%, 50%);
     border-radius: 5px;
 }
+
 .art {
     transition: .3s all ease-in-out;
     position: relative;
 }
+
 .art img {
     width: 337px;
     height: 500px;
     transition: .3s all ease-in-out;
 }
+
 .article-flex {
     display: flex;
     gap: 50px;
     justify-content: space-between;
 }
+
 .articles {
     padding: 120px 0;
     background-color: #131117;
 }
-.art:hover img{
+
+.art:hover img {
     filter: brightness(0.7);
 }
+
 .absolute {
     padding: 50px;
     background-color: black;
@@ -242,17 +293,21 @@ img {
     z-index: 10;
     transition: .4s all ease-in-out;
 }
+
 .art:hover .absolute {
     width: 90%;
-    background-color:#E8363C;
+    background-color: #E8363C;
     transform: translateX(-20px);
 }
+
 .absolute h3 {
     font-size: 28px;
 }
+
 .absolute p {
     font-weight: 600;
 }
+
 .tech {
     padding: 90px;
     background-color: #131117;
@@ -260,94 +315,322 @@ img {
     width: 40%;
     z-index: 9;
 }
+
 .tech p {
     margin: 20px 0px;
 }
+
 .tech h2 {
     font-size: 35px;
 }
+
 .tech img {
     margin-bottom: 20px;
 }
+
 .cloth {
     display: flex;
     align-items: center;
 }
+
 .tech-img img {
     width: 736px !important;
     height: 972px;
 }
+
 .flex {
     display: flex;
     align-items: center;
     gap: 40px;
 }
+
 .pop {
     padding: 100px 0;
     text-align: center;
 }
+
 .flex {
     margin-top: 50px;
 }
+
 .brand {
     text-align: left !important;
 }
+
 .brand h3 {
     margin: 25px 0;
 }
+
 .date {
     margin-top: 20px;
     font-weight: 700;
     color: #403f43;
     font-size: 12px;
 }
+
 .red {
     color: #E8363C;
 }
+
 .btm {
     background-color: #131117;
     padding: 100px 0;
     color: white;
 }
+
 .detail h2 {
     margin-bottom: 20px;
 }
+
 .footer {
     padding: 100px 0;
 }
+
 .ftr-flex {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     gap: 40px;
 }
+
 .ftr {
     width: 25%;
 }
+
 .about {
     width: 45%;
 }
+
 .ftr ul {
     list-style: none;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
+
 .ftr h2 {
     margin-bottom: 25px;
 }
+
 .contact ul {
     gap: 5px;
 }
+
 .ftr-logo {
     padding: 50px 0px;
 }
+
 .ftr-logo img {
     width: 170px;
     height: 40;
 }
+
 .footer-image {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media(max-width:576px) {
+    .container {
+        max-width: 100%;
+        padding: 0px 20px;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .socials {
+        display: none;
+    }
+
+    .logo img {
+        max-width: 115px;
+        height: 25px;
+    }
+
+    .hero-text h1 {
+        font-size: 40px;
+    }
+
+    .hero {
+        padding: 150px 0px 100px 0px;
+    }
+
+    .hero-flex {
+        flex-direction: column;
+    }
+
+    .hero-text {
+        width: 100%;
+    }
+
+    .checks {
+        display: none;
+    }
+
+    .hero button {
+        display: none;
+    }
+
+    .hero-image {
+        display: none;
+    }
+
+    .card-flex {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .prod {
+        text-align: center;
+        gap: 20px;
+        flex-direction: column;
+    }
+
+    .heading h2 {
+        font-size: 30px;
+    }
+
+    .items {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .item {
+        text-align: center;
+        width: 100%;
+    }
+
+    .image {
+        width: 100%;
+        justify-items: center;
+    }
+
+    .article-flex {
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .art {
+        width: 100%;
+    }
+
+    .art img {
+        width: 100%;
+    }
+
+    .absolute {
+        bottom: 0;
+    }
+
+    .cloth {
+        flex-direction: column;
+    }
+
+    .tech {
+        width: 100%;
+        padding: 40px;
+        text-align: center;
+    }
+
+    .tech-img {
+        width: 100%;
+    }
+
+    h2 {
+        font-size: 30px !important;
+    }
+
+    .flex {
+        flex-direction: column;
+    }
+
+    .ftr-flex {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .ftr {
+        width: 100%;
+    }
+
+    .image img {
+        max-width: 100%;
+    }
+}
+
+@media(max-width:768px) {
+    .container {
+        max-width: 100%;
+        padding: 0px 15px;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .socials {
+        display: none;
+    }
+
+    .items {
+        flex-wrap: wrap;
+        gap: 25px;
+    }
+
+    .image img {
+        max-width: 100%;
+    }
+
+    .item {
+        width: 48%;
+    }
+
+    .image {
+        width: 100%;
+    }
+
+    .hero-text h1 {
+        font-size: 40px;
+    }
+
+    .hero-image {
+        display: none;
+    }
+
+    .hero-text {
+        width: 100%;
+        text-align: center;
+    }
+
+    .hero-text button {
+        margin: 20px 0;
+    }
+
+    .hero-flex {
+        padding: 100px 0px;
+    }
+
+    .checks {
+        display: none;
+    }
+
+    .card-flex {
+        flex-wrap: wrap;
+    }
+
+    .card {
+        width: 50%;
+        margin-top: 20px;
+    }
+
+    .article-flex {
+        flex-direction: column;
+    }
+
+    .art img {
+        width: 100%;
+    }
 }
